Fix readability issues of text on images

--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ p {
 
 a {
     text-decoration: none;
+    color: inherit;
 }
 
 img {
@@ -89,7 +90,7 @@ h4,
 
 .btn {
     padding: 0.5em 1em;
-    border-radius: 10%;
+    border-radius: 10px;
     background-color: var(--color-accent);
     color: var(--text-color-light);
 }
@@ -109,6 +110,11 @@ h4,
     margin: 1em 2em;
 }
 
+.navbar__split {
+    margin-left: 3em;
+}
+
+
 /* FIRST SECTION */
 .welcome {
     background-image: url('../images/fruit.jpg');
@@ -124,6 +130,9 @@ h4,
 .welcome__form {
     font-size: 2rem;
     margin: 1em 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .welcome__form > input {
@@ -131,6 +140,9 @@ h4,
     border-radius: 1em 0 0 1em;
     border: none;
     height: 4rem;
+    padding-left: 3%;
+    margin-right: .4em;
+    flex-grow: 1;
 }
 
 .welcome__socials {
@@ -138,12 +150,23 @@ h4,
     margin: 2em 0;
 }
 
+.welcome__socials a{
+    margin: 1em;
+    color: var(--color-accent);
+    text-decoration: none;
+    font-size: 2.3rem;
+}
+
 /* SECOND SECTION */
 .about {
     display: flex;
     justify-content: center;
-    background-image: url('../images/pies.jpg');
-    background: linear-gradient(rgba(0, 0, 0, 1));
+    background: 
+    linear-gradient(
+      rgba(255, 255, 255, 0.5), 
+      rgba(255, 255, 255, 0.5)
+    ),
+    url('../images/pies.jpg');
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -151,7 +174,6 @@ h4,
 .about__text {
     max-width: 50%;
     margin: auto;
-
 }
 
 .about .btn {
@@ -164,7 +186,7 @@ h4,
     background: linear-gradient(rgba(231, 233, 232, 0.5), rgba(187, 191, 194, 0.8))
 }
 .speciality__nav {
-    width: 40%;
+    width: 45%;
 }
 .speciality__nav > ul{
     display: flex;
@@ -181,19 +203,24 @@ h4,
 
 }
 
-.grid-item {
+.speciality__item {
     width: calc(25% - 2em);
     height: 250px;
     margin: 1em;
 }
 
-.grid-item > img {
+.speciality__item > img {
     height: 100%;
 }
 
 /* FOURTH SECTION */
 .hours {
-    background-image: url('../images/coffee.jpg');
+    background: 
+    linear-gradient(
+      rgba(255, 255, 255, 0.4), 
+      rgba(255, 255, 255, 0.4)
+    ),
+    url('../images/coffee.jpg');
     background-size: cover;
     background-position: top;
 }
@@ -221,14 +248,15 @@ h4,
     justify-content: space-between;
 }
 
+.hours__time {
+    font-weight: bold;
+}
+
 .hours__img {
     width: 80%;
 }
 
 /* FIFTH SECTION */
-.testimonials {
-
-}
 
 .testimonials__review {
     text-align: center;
@@ -266,4 +294,23 @@ h4,
     color: var(--color-accent);
     margin: .3em;
     margin-top: 1.2em;
+}
+
+
+/* MEDIA QUERIES */
+
+@media screen and (max-width: 975px) {
+    .html {
+        font-size: 1rem;
+    }
+    .speciality__gallery{
+        /* flex-direction: column; */
+    }
+    .speciality__item{
+        width: 100%;
+        height: auto;
+    }
+    .speciality__nav{
+        width: 100%;
+    }
 }
